--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     // Kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
